.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/aa_AHPRA_Number_3__c.field-meta.xml
<CustomField>
    <fullName>aa_AHPRA_Number_3__c</fullName>
    <label>AHPRA Number #3</label>
    <length>18</length>
    <type>Text</type>
</CustomField>