.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/aa_AHPRA_Number__c.field-meta.xml
<CustomField>
    <fullName>aa_AHPRA_Number__c</fullName>
    <label>AHPRA Candidate Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>