.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/aa_Belmore_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>aa_Belmore_Legacy_ID__c</fullName>
    <label>Belmore Legacy ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>