.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/aa_Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>aa_Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>OHLA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>