.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/AA_Induction_Status__c.field-meta.xml
<CustomField>
    <fullName>AA_Induction_Status__c</fullName>
    <label>Induction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Induction to be booked</fullName>
            </value>
            <value>
                <fullName>Induction Booked</fullName>
            </value>
            <value>
                <fullName>ID Badged Created</fullName>
            </value>
            <value>
                <fullName>ID Badge &amp; Uniform Provided</fullName>
            </value>
            <value>
                <fullName>Allocations Introduction</fullName>
            </value>
            <value>
                <fullName>Induction Process Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>