.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/AA_LMS_Status__c.field-meta.xml
<CustomField>
    <fullName>AA_LMS_Status__c</fullName>
    <label>LMS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
                <default>true</default>
                <label>Sent</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted (Applicant)</fullName>
            </value>
            <value>
                <fullName>Progressed</fullName>
            </value>
            <value>
                <fullName>Update Required</fullName>
            </value>
            <value>
                <fullName>Update in Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>