.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/AA_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>AA_Mailing_State__c</fullName>
    <description>Captures Mailing State from Mailing Address to be searched upon in USAM</description>
    <label>Mailing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>