.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/aa_Notice_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>aa_Notice_Period_Start_Date__c</fullName>
    <label>Notice Period Start Date</label>
    <type>Date</type>
</CustomField>