.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/AA_Payroll_Collection__c.field-meta.xml
<CustomField>
    <fullName>AA_Payroll_Collection__c</fullName>
    <label>Payroll Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Ready to Review</fullName>
            </value>
            <value>
                <fullName>Additional Ref Requested</fullName>
            </value>
            <value>
                <fullName>Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>