.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/aa_Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>aa_Preferred_Name__c</fullName>
    <label>Preferred Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>