.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/aa_RDB_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>aa_RDB_Legacy_ID__c</fullName>
    <label>RDB Legacy ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>