.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/AA_Reference_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>AA_Reference_Check_Status__c</fullName>
    <label>Reference Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
                <default>true</default>
                <label>Sent</label>
            </value>
            <value>
                <fullName>Ready to Review</fullName>
            </value>
            <value>
                <fullName>Additional Ref Requested</fullName>
            </value>
            <value>
                <fullName>Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>