.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/accommodations_in_the_workplace_How_can__c.field-meta.xml
<CustomField>
    <fullName>accommodations_in_the_workplace_How_can__c</fullName>
    <inlineHelpText>Do you have any medical conditions or disabilities that may require accommodations in the workplace? How can we support your needs?</inlineHelpText>
    <label>accommodations in the workplace? How can</label>
    <type>TextArea</type>
</CustomField>