.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Add_to_Ahpra_nightly_Batch_Job__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Ahpra_nightly_Batch_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to Ahpra nightly Batch Job</label>
    <type>Checkbox</type>
</CustomField>