.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Aged_Care_Sector__c.field-meta.xml
<CustomField>
    <fullName>Aged_Care_Sector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aged Care Sector</label>
    <type>Checkbox</type>
</CustomField>