.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Ahpra_Division__c.field-meta.xml
<CustomField>
    <fullName>Ahpra_Division__c</fullName>
    <label>AHPRA Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>