.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Ahpra_Last_Checked__c.field-meta.xml
<CustomField>
    <fullName>Ahpra_Last_Checked__c</fullName>
    <label>Ahpra Last Checked</label>
    <type>Date</type>
</CustomField>