.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Ahpra_Profession__c.field-meta.xml
<CustomField>
    <fullName>Ahpra_Profession__c</fullName>
    <label>AHPRA Profession</label>
    <length>255</length>
    <type>Text</type>
</CustomField>