.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Ahpra_Profession_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Ahpra_Profession_Start_Date__c</fullName>
    <label>AHPRA Profession Start Date</label>
    <type>Date</type>
</CustomField>