.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/AHPRA_Registered__c.field-meta.xml
<CustomField>
    <fullName>AHPRA_Registered__c</fullName>
    <label>AHPRA Registered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>