.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Ahpra_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Ahpra_Registration_Status__c</fullName>
    <label>AHPRA Registration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>