.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Ahpra_Registration_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Ahpra_Registration_To_Date__c</fullName>
    <label>AHPRA Registration To Date</label>
    <type>Date</type>
</CustomField>