.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Allow_Auto_Fetch_of_Ahpra_Details__c.field-meta.xml
<CustomField>
    <fullName>Allow_Auto_Fetch_of_Ahpra_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this record is allowed to be added to the Ahpra Batch Job.  This is set automatically after the initial manual Ahpra check is made.  If the fetch is successful, this will be auto populated.

If any Ahpra number is added or edited, this will be set to false until another manual check is made.</description>
    <inlineHelpText>Determines if this record is allowed to be added to the Ahpra Batch Job.  This is set automatically after the initial manual Ahpra check is made.  If the fetch is successful, this will be auto populated.

If any Ahpra number is added or edited, this will be set to false until another manual check is made.</inlineHelpText>
    <label>Allow Auto Fetch of Ahpra Details</label>
    <type>Checkbox</type>
</CustomField>