.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Any_professional_enquiries__c.field-meta.xml
<CustomField>
    <fullName>Any_professional_enquiries__c</fullName>
    <inlineHelpText>Are you aware of any professional enquiries undertaken following allegations made against you in Australia or abroad, which may have a bearing on your suitability for this post?</inlineHelpText>
    <label>Any professional enquiries</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>