.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Areas_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Interest__c</fullName>
    <inlineHelpText>What areas are you interested in?</inlineHelpText>
    <label>Areas of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency Nursing</fullName>
            </value>
            <value>
                <fullName>Regional, Rural and Remote Nursing</fullName>
            </value>
            <value>
                <fullName>Workplace immunisation and health checks</fullName>
            </value>
            <value>
                <fullName>Health Hospitality &amp; Support</fullName>
            </value>
            <value>
                <fullName>Immunisation</fullName>
                <isActive>false</isActive>
                <label>Immunisation</label>
            </value>
            <value>
                <fullName>Nursing agency shift</fullName>
                <isActive>false</isActive>
                <label>Nursing agency shift</label>
            </value>
            <value>
                <fullName>Regional contracts</fullName>
                <isActive>false</isActive>
                <label>Regional contracts</label>
            </value>
            <value>
                <fullName>Rural and remote contracts</fullName>
                <isActive>false</isActive>
                <label>Rural and remote contracts</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>