.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Availability_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Availability_Additional_Notes__c</fullName>
    <description>Notes from the candidate with additional details about their contracting availability</description>
    <inlineHelpText>Notes from the candidate with additional details about their contracting availability</inlineHelpText>
    <label>Availability Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>