.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Available_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Available_End_Date__c</fullName>
    <description>The end date the candidate has expressed interest in a contracting position to</description>
    <inlineHelpText>The end date the candidate has expressed interest in a contracting position to</inlineHelpText>
    <label>Available End Date</label>
    <type>Date</type>
</CustomField>