.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Available_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Available_Start_Date__c</fullName>
    <description>The start date the candidate has expressed interest in a contracting potion from</description>
    <inlineHelpText>The start date the candidate has expressed interest in a contracting potion from</inlineHelpText>
    <label>Available Start Date</label>
    <type>Date</type>
</CustomField>