.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Award_Level__c.field-meta.xml
<CustomField>
    <fullName>Award_Level__c</fullName>
    <description>Candidate&apos;s active Award Level / Paypoint.</description>
    <inlineHelpText>Candidate&apos;s active Award Level / Paypoint.</inlineHelpText>
    <label>Award Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>