.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/b3o__Password__c.field-meta.xml
<CustomField>
    <fullName>b3o__Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>