.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/b3o__Password_Reset__c.field-meta.xml
<CustomField>
    <fullName>b3o__Password_Reset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Password Reset</label>
    <type>Checkbox</type>
</CustomField>