.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/b3o__Temporary_Password__c.field-meta.xml
<CustomField>
    <fullName>b3o__Temporary_Password__c</fullName>
    <inlineHelpText>This password was issued as the user has reset their original password</inlineHelpText>
    <label>Temporary Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>