.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <defaultValue>$Setup.Alliance_General_Settings__c.Base_URL__c</defaultValue>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>