.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Branch_Brand__c.field-meta.xml
<CustomField>
    <fullName>Branch_Brand__c</fullName>
    <formula>TEXT( Branch__r.Brand_c__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Brand</label>
    <type>Text</type>
</CustomField>