.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Call_preferences__c.field-meta.xml
<CustomField>
    <fullName>Call_preferences__c</fullName>
    <inlineHelpText>What are your call preferences? - AM/PM/ALL</inlineHelpText>
    <label>Call preferences</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>