.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Candidate_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Timezone__c</fullName>
    <label>Candidate Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Australia_Timezones</valueSetName>
    </valueSet>
</CustomField>