.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Cardiology__c.field-meta.xml
<CustomField>
    <fullName>Cardiology__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cardiology</label>
    <type>Checkbox</type>
</CustomField>