.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered Nurse</fullName>
            </value>
            <value>
                <fullName>Registered Midwife</fullName>
            </value>
            <value>
                <fullName>Enrolled Nurse</fullName>
            </value>
            <value>
                <fullName>Nursing Assistant</fullName>
            </value>
            <value>
                <fullName>Personal Care Worker</fullName>
            </value>
            <value>
                <fullName>Patient Services Assistant (PSA)</fullName>
            </value>
            <value>
                <fullName>Theatre Technician</fullName>
            </value>
            <value>
                <fullName>CSSD Attendant</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Cook</fullName>
            </value>
            <value>
                <fullName>Food Services Assistant</fullName>
            </value>
            <value>
                <fullName>Kitchen Hand</fullName>
            </value>
            <value>
                <fullName>Laundry</fullName>
            </value>
            <value>
                <fullName>Cleaner</fullName>
            </value>
            <value>
                <fullName>Chef / Kitchen Hand</fullName>
            </value>
            <value>
                <fullName>Kitchen Hand / Cleaner</fullName>
            </value>
            <value>
                <fullName>Regional, Rural and Remote</fullName>
            </value>
            <value>
                <fullName>Medical and Healthcare Assistant</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Catering Supervisor</fullName>
                <isActive>false</isActive>
                <label>Catering Supervisor</label>
            </value>
            <value>
                <fullName>Clinical Midwife</fullName>
                <isActive>false</isActive>
                <label>Clinical Midwife</label>
            </value>
            <value>
                <fullName>Clinical Midwife Consultant</fullName>
                <isActive>false</isActive>
                <label>Clinical Midwife Consultant</label>
            </value>
            <value>
                <fullName>Clinical Nurse</fullName>
                <isActive>false</isActive>
                <label>Clinical Nurse</label>
            </value>
            <value>
                <fullName>Clinical Nurse Consultant</fullName>
                <isActive>false</isActive>
                <label>Clinical Nurse Consultant</label>
            </value>
            <value>
                <fullName>Director of Nursing</fullName>
                <isActive>false</isActive>
                <label>Director of Nursing</label>
            </value>
            <value>
                <fullName>Director of Nursing - Midwifery</fullName>
                <isActive>false</isActive>
                <label>Director of Nursing - Midwifery</label>
            </value>
            <value>
                <fullName>Executive Director of Nursing</fullName>
                <isActive>false</isActive>
                <label>Executive Director of Nursing</label>
            </value>
            <value>
                <fullName>Executive Director of Nursing / Midwifery</fullName>
                <isActive>false</isActive>
                <label>Executive Director of Nursing / Midwifery</label>
            </value>
            <value>
                <fullName>Maintenance Worker</fullName>
                <isActive>false</isActive>
                <label>Maintenance Worker</label>
            </value>
            <value>
                <fullName>Midwifery Unit Manager</fullName>
                <isActive>false</isActive>
                <label>Midwifery Unit Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>