.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Colorectal__c.field-meta.xml
<CustomField>
    <fullName>Colorectal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Colorectal</label>
    <type>Checkbox</type>
</CustomField>