.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Communication_preferences__c.field-meta.xml
<CustomField>
    <fullName>Communication_preferences__c</fullName>
    <label>Communication preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>In-app</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>