.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Connect_App_User_Created__c.field-meta.xml
<CustomField>
    <fullName>Connect_App_User_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connect App User Created</label>
    <type>Checkbox</type>
</CustomField>