.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Contract_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Contract_Preferences__c</fullName>
    <label>Contract Preferences</label>
    <type>TextArea</type>
</CustomField>