.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Contract_Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Sent By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>People</relationshipName>
    <type>Lookup</type>
</CustomField>