.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Contracted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Hours__c</fullName>
    <description>This field stores the total number of hours an employee is contracted to work. It will be used for TOIL calculations and should reflect the standard work hours agreed upon in the employee&apos;s contract</description>
    <inlineHelpText>The total contracted hours for this employee</inlineHelpText>
    <label>Contracted Hours</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>