.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Corporate_Health__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Health__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Health</label>
    <type>Checkbox</type>
</CustomField>