.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Created_via_form__c.field-meta.xml
<CustomField>
    <fullName>Created_via_form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created via form</label>
    <type>Checkbox</type>
</CustomField>