.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Criminal_History_Statutory_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Criminal_History_Statutory_Declaration__c</fullName>
    <inlineHelpText>Please select the appropriate option for your criminal history statutory declaration.</inlineHelpText>
    <label>Criminal History Statutory Declaration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>