.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Currently_suspended__c.field-meta.xml
<CustomField>
    <fullName>Currently_suspended__c</fullName>
    <inlineHelpText>Have you ever been, or are you currently suspended from duty with any employer, organisation, agency or by the Professional Body?</inlineHelpText>
    <label>Currently suspended?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>