.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Dementia_Specific_Care__c.field-meta.xml
<CustomField>
    <fullName>Dementia_Specific_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dementia-Specific Care</label>
    <type>Checkbox</type>
</CustomField>