.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Do_you_drink_alcohol__c.field-meta.xml
<CustomField>
    <fullName>Do_you_drink_alcohol__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you drink alcohol?</label>
    <type>Checkbox</type>
</CustomField>