.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Do_you_have_any_known_allergies__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_any_known_allergies__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have any known allergies?</inlineHelpText>
    <label>Do you have any known allergies?</label>
    <type>Checkbox</type>
</CustomField>