.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Do_you_identify_as_indigenous_or_a_Torre__c.field-meta.xml
<CustomField>
    <fullName>Do_you_identify_as_indigenous_or_a_Torre__c</fullName>
    <label>Do you identify as indigenous or a Torre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>