.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Do_you_smoke_vape__c.field-meta.xml
<CustomField>
    <fullName>Do_you_smoke_vape__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you smoke/vape?</inlineHelpText>
    <label>Do you smoke/vape?</label>
    <type>Checkbox</type>
</CustomField>