.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/DoNotIndex__c.field-meta.xml
<CustomField>
    <fullName>DoNotIndex__c</fullName>
    <formula>OR(RecordType.Name=&apos;Client&apos;,RecordType.Name=&apos;Inactive_Candidate&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DoNotIndex</label>
    <type>Checkbox</type>
</CustomField>