.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Dynamic_URL__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_URL__c</fullName>
    <label>Dynamic URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>